--- a/big_o_notacion/big_o_notation_data_structure/big_o_notation_data_structure.csproj
+++ b/big_o_notacion/big_o_notation_data_structure/big_o_notation_data_structure.csproj
@@ -42,6 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollectionFactory.cs" />
+    <Compile Include="CollectionType.cs" />
+    <Compile Include="LogLine.cs" />
+    <Compile Include="LogReader.cs" />
+    <Compile Include="LogReaderIterator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
